--- a/definitions/loopback-example-app.yaml
+++ b/definitions/loopback-example-app.yaml
@@ -3405,9 +3405,8 @@ definitions:
         items:
           type: string
     required:
-      - familia
       - id_regiao
-      - regiao
+      - sistemas
     additionalProperties: false
   ClassGeral:
     properties:
